--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,12 @@ h1 {
   margin: 0 auto;
   font-family: 'Maven Pro', sans-serif;
 }
+@media (max-width: 500px) {
+  .banner header .title {
+    font-size: 10rem;
+    text-align: center;
+  }
+}
 .banner header .buttons {
   cursor: pointer;
   padding-top: 40px;
@@ -130,7 +136,8 @@ h1 {
 .banner form button {
   height: 47px;
   background: #DEF2F1;
-  padding: width: 120px;
+  padding: 10px;
+  width: 120px;
   font-size: 2rem;
   font-family: 'Maven Pro', sans-serif;
   color: #327A77;
@@ -139,6 +146,40 @@ h1 {
 .banner form button:hover {
   background: #17242A;
   color: #DEF2F1;
+}
+@media (max-width: 500px) {
+  .banner form {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .banner {
+    height: 400px;
+  }
+}
+.about-banner {
+  background-image: url("../images/cloud-banner.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 520px;
+  text-align: center;
+}
+.about-banner .title-about {
+  font-size: 15rem;
+  align-content: center;
+  margin: 0 auto;
+  font-family: 'Maven Pro', sans-serif;
+}
+@media (max-width: 500px) {
+  .about-banner .title-about {
+    font-size: 9rem;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .about-banner {
+    height: 400px;
+  }
 }
 .job-listings {
   display: flex;
@@ -154,10 +195,26 @@ h1 {
   justify-content: center;
   flex-direction: row;
 }
+@media (max-width: 500px) {
+  .job-listings .job-cards {
+    flex-direction: column;
+  }
+}
 .job-listings .job-cards img {
   border-radius: 28px;
   height: 400px;
   padding: 10px;
+}
+@media (max-width: 500px) {
+  .job-listings .job-cards img {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+.job-listings .job-cards .teamphotos {
+  border-radius: 250px;
+  height: 280px;
+  width: 280px;
 }
 .job-listings .job-cards .text-box {
   background: #DEF2F1;
@@ -178,4 +235,19 @@ h1 {
   margin: 40px;
   text-align: center;
   color: #17242A;
+}
+@media (max-width: 500px) {
+  .job-listings .job-cards .text-box {
+    width: 100%;
+    margin: 10px auto;
+    padding: 5px;
+  }
+  .job-listings .job-cards .text-box p {
+    margin: 10px;
+  }
+}
+@media (max-width: 500px) {
+  .job-listings .job-card2 {
+    display: none;
+  }
 }
