--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,7 +19,12 @@
             margin: 0 auto;
             font-family: @header;
         
+            @media @tablet {
+                font-size: 10rem;
+                text-align: center;
+            }
         }
+
 
         .buttons {
             cursor:pointer;
@@ -77,7 +82,7 @@
         button {
             height: 47px;
             background: @medium2;
-            padding: 
+            padding: 10px;
             width: 120px;
             font-size: 2rem;
             font-family: @header;
@@ -90,7 +95,40 @@
             background: @dark;
             color: @medium2;
         }
+
+        @media @tablet {
+             display: none;   
+        }
     }
+
+    @media @tablet {
+        height: 400px;
+    }
+}
+
+.about-banner {
+    background-image: url("../images/cloud-banner.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 520px;
+    text-align: center;
+
+    .title-about {
+        font-size: 15rem;
+        align-content: center;
+        margin: 0 auto;
+        font-family: @header;
+    
+        @media @tablet {
+            font-size: 9rem;
+            text-align: center;
+        }
+    }
+
+    @media @tablet {
+        height: 400px;
+    }
+
 }
 
 .job-listings {
@@ -107,14 +145,30 @@
         .center();
         flex-direction: row;
 
+        @media @tablet {
+            flex-direction: column;
+        }
+
         img {
             border-radius: 28px;
             height: 400px;
             padding: 10px;
+
+            @media @tablet {
+                width: 100%;
+                margin: 0 auto;
+            };
         }
 
-        .text-box{
+        .teamphotos {
+            border-radius: 250px;
+            height: 280px;
+            width: 280px;
+        }
 
+
+
+        .text-box{
             background: @medium2;
             border-radius: 28px;
             margin: 25px;
@@ -135,10 +189,23 @@
                 text-align: center;
                 color: @dark;
             }
+
+            @media @tablet {
+                width: 100%;
+                margin: 10px auto;
+                padding: 5px;
+
+                p {
+                    margin: 10px;
+                }
+            }
         }
-    }   
+    } 
+    
+    @media @tablet {
+
+        .job-card2 {
+            display: none;
+        }
+    }
 }
-
-
-
-
