--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,6 @@ h1 {
 .banner header {
   display: flex;
   flex-direction: column;
-  width: 100%;
   align-items: center;
   margin-top: 40px;
 }
@@ -75,7 +74,7 @@ h1 {
   margin: 0 auto;
   font-family: 'Maven Pro', sans-serif;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .banner header .title {
     font-size: 10rem;
     text-align: center;
@@ -147,12 +146,12 @@ h1 {
   background: #17242A;
   color: #DEF2F1;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .banner form {
     display: none;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .banner {
     height: 400px;
   }
@@ -170,13 +169,13 @@ h1 {
   margin: 0 auto;
   font-family: 'Maven Pro', sans-serif;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .about-banner .title-about {
     font-size: 9rem;
     text-align: center;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .about-banner {
     height: 400px;
   }
@@ -194,18 +193,19 @@ h1 {
   display: flex;
   justify-content: center;
   flex-direction: row;
+  align-items: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .job-listings .job-cards {
     flex-direction: column;
   }
 }
 .job-listings .job-cards img {
   border-radius: 28px;
-  height: 400px;
+  height: auto;
   padding: 10px;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .job-listings .job-cards img {
     width: 100%;
     margin: 0 auto;
@@ -217,26 +217,25 @@ h1 {
   width: 280px;
 }
 .job-listings .job-cards .text-box {
-  background: #DEF2F1;
-  border-radius: 28px;
-  margin: 25px;
+  background: #FEFFFF;
+  border-top: 2px solid #DEF2F1;
+  border-bottom: 2px solid #DEF2F1;
+  margin: 30px;
+  height: auto;
   padding: 15px;
   width: 50%;
+  font-family: 'Roboto', sans-serif;
+  color: #327A77;
+  text-align: center;
+  width: 40%;
 }
 .job-listings .job-cards .text-box h2 {
-  text-align: center;
   font-size: 2rem;
-  color: #17242A;
-  font-family: 'Maven Pro', sans-serif;
 }
 .job-listings .job-cards .text-box p {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5rem;
-  margin: 40px;
-  text-align: center;
-  color: #17242A;
+  font-size: 1.75rem;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .job-listings .job-cards .text-box {
     width: 100%;
     margin: 10px auto;
@@ -246,7 +245,7 @@ h1 {
     margin: 10px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .job-listings .job-card2 {
     display: none;
   }
