--- a/css/index.css
+++ b/css/index.css
@@ -16,28 +16,54 @@ h1 {
 }
 .navigation {
   padding: 20px;
-}
-.navigation .nav {
   width: 50px;
 }
-.navigation .nav div {
+.navigation div {
   height: 8px;
   background-color: #FEFFFF;
   margin: 8px 0;
   border-radius: 25px;
   transition: 0.3s;
 }
-.navigation .nav div:hover {
+.navigation div:hover {
   width: 50px;
 }
-.navigation .nav .one {
+.navigation .one {
   width: 45px;
 }
-.navigation .nav .two {
+.navigation .two {
   width: 38px;
 }
-.navigation .nav .three {
+.navigation .three {
   width: 45px;
+}
+.show-menu {
+  background: #DEF2F1;
+  width: 20%;
+  height: 770px;
+  top: 0;
+  position: absolute;
+}
+.show-menu li {
+  height: 20px;
+  padding: 20px;
+  border-bottom: 1px solid #4BAFA9;
+  list-style: none;
+}
+.show-menu li a {
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.75rem;
+  color: #17242A;
+}
+.show-menu li .active {
+  color: #4BAFA9;
+}
+.show-menu li a:hover {
+  color: #4BAFA9;
+}
+.hide-menu {
+  visibility: hidden;
 }
 .footer {
   width: 100%;
@@ -60,7 +86,7 @@ h1 {
   background-image: url("../images/cloud-banner.jpg");
   background-size: cover;
   width: 100%;
-  height: 770px;
+  height: 816px;
 }
 .banner header {
   display: flex;
@@ -131,9 +157,14 @@ h1 {
 .banner form input {
   height: 40px;
   width: 375px;
+  font-size: 2.25rem;
+  padding: 5px;
+  color: #327A77;
+  font-family: 'Roboto', sans-serif;
+  background: #FEFFFF;
 }
 .banner form button {
-  height: 47px;
+  height: 56px;
   background: #DEF2F1;
   padding: 10px;
   width: 150px;
@@ -141,6 +172,7 @@ h1 {
   font-family: 'Maven Pro', sans-serif;
   color: #327A77;
   border: 1px solid #327A77;
+  border-radius: 5px;
 }
 .banner form button:hover {
   background: #17242A;
