--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,7 +4,7 @@
     background-image: url("../images/cloud-banner.jpg");
     background-size: cover;
     width: 100%;
-    height: 770px;
+    height: 816px;
 
     header {
         display: flex;
@@ -76,10 +76,15 @@
         input {
             height: 40px;
             width: 375px;
+            font-size: 2.25rem;
+            padding: 5px;
+            color: @dark2;
+            font-family: @content;
+            background: @light;
         }
 
         button {
-            height: 47px;
+            height: 56px;
             background: @medium2;
             padding: 10px;
             width: 150px;
@@ -87,6 +92,7 @@
             font-family: @header;
             color: @dark2;
             border: 1px solid @dark2;
+            border-radius: 5px;
 
         }
 
@@ -172,7 +178,6 @@
             background: @light;
             border-top: 2px solid @medium2;
             border-bottom: 2px solid @medium2;
-            // border-radius: 28px;
             margin: 30px;
             height: auto;
             padding: 15px;
