--- a/css/index.css
+++ b/css/index.css
@@ -40,14 +40,16 @@ h1 {
 .show-menu {
   background: #DEF2F1;
   width: 20%;
-  height: 770px;
+  height: 305px;
   top: 0;
   position: absolute;
+  text-align: left;
 }
 .show-menu li {
   height: 20px;
   padding: 20px;
   border-bottom: 1px solid #4BAFA9;
+  border-right: 1px solid #4BAFA9;
   list-style: none;
 }
 .show-menu li a {
@@ -74,6 +76,10 @@ h1 {
   color: #17242A;
   font-size: 1rem;
   height: 175px;
+  flex-direction: column;
+}
+.footer .social img {
+  width: 30px;
 }
 .footer p {
   text-align: center;
