--- a/less/footer.less
+++ b/less/footer.less
@@ -6,6 +6,14 @@
     color: @dark;
     font-size: 1rem;
     height: 175px;
+    flex-direction: column;
+
+    .social {
+
+        img {
+            width: 30px;
+        }
+    }
 
     p {
         text-align: center;
