--- a/less/navigation.less
+++ b/less/navigation.less
@@ -34,14 +34,15 @@
 .show-menu {
     background: @medium2;
     width: 20%;
-    height: 770px;
+    height: 305px;
     top: 0;
     position: absolute;
-
+    text-align: left;
     li {
         height: 20px;
         padding: 20px;
         border-bottom: 1px solid @medium;
+        border-right: 1px solid @medium;
         list-style: none;
 
         a {
@@ -68,9 +69,7 @@
 
 
 
-
-
-// nav {
+// li {
 
 //     a {
 //         justify-content: space-between;
