--- a/less/home-page.less
+++ b/less/home-page.less
@@ -187,6 +187,15 @@
             text-align: center;
             width: 40%;
 
+            a {
+                text-decoration: none;
+                color: @dark2;
+            }
+
+            a:hover{
+                color: @dark;
+            }
+
 
             h2{
                 font-size: 2rem;
